k3s/archive/smarthome/zwavejsui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zwavejsui
  name: zwavejsui
  namespace: smarthome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zwavejsui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zwavejsui
    spec:
      containers:
        - name: zwavejsui
          image: zwavejs/zwave-js-ui:latest
          ports:
            - containerPort: 8091
            - containerPort: 3000
          tty: true
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /dev/zwave
              name: zwavestick
            - mountPath: /usr/src/app/store
              subPath: zwavejsui
              name: config
      restartPolicy: Always
      volumes:
        - name: zwavestick
          hostPath:
            path: /dev/serial/by-id/usb-Silicon_Labs_Zooz_ZST10_700_Z-Wave_Stick_dca42aefc060ec118dfa437625bfaa52-if00-port0
        - name: config
          persistentVolumeClaim:
            claimName: local-smarthome-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zwavejsui
  name: zwavejsui-loadbalancer
  namespace: smarthome
spec:
  ports:
    - name: "websocket"
      port: 3000
      targetPort: 3000
  type: LoadBalancer
  selector:
    app: zwavejsui
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zwavejsui
  name: zwavejsui-clusterip
  namespace: smarthome
spec:
  ports:
    - name: "webui"
      port: 80
      targetPort: 8091
  type: ClusterIP
  selector:
    app: zwavejsui
