k3s/archive/smarthome/ingresss.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: smarthone-ingress
  namespace: smarthome
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`z2m.local.io`)
      services:
        - kind: Service
          name: zigbee2mqtt
          port: 8081
    - kind: Rule
      match: Host(`zwave.local.io`)
      services:
        - kind: Service
          name: zwavejsui-clusterip
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`lubelogger.local.io`)
      services:
        - kind: Service
          name: lubelogger
          port: 80
          scheme: http
